--- a/Assets/CSS/portfolio.css
+++ b/Assets/CSS/portfolio.css
@@ -76,6 +76,9 @@ main{
    max-width: 1140px;
    margin: 0 auto;
 }
+section{
+   margin-top: 130px;
+}
 
 /* ----------About Section Style ---------- */
 .about{
@@ -87,7 +90,8 @@ main{
 
 }
 .section-title{
-   margin-bottom: 30px;
+   text-align: center;
+   margin-bottom: 50px;
    font-weight: 700;
    font-size: 35px;
 }
@@ -112,3 +116,30 @@ main{
    font-weight: 700;
    color: #474747;
 }
+/* <!------- What I Do Section Styles -------> */
+.What-I-do{
+   margin-top: 130px;
+}
+.skill-container{
+   display: flex;
+   gap: 24px;
+}
+.skill{
+   background: #FFFFFF;
+   box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+   border-radius: 5px;
+   padding: 30px
+}
+.skill-title{
+   font-weight: 700;
+   font-size: 20px;
+   color: #181818;
+   margin-top: 30px;
+   margin-bottom: 20px;
+}
+.skill-description{
+   font-weight: 400;
+   font-size: 16px;
+   color: #757575;
+}
+/* ------Resume Styles------ */
