contact section adedd

--- a/Assets/CSS/portfolio.css
+++ b/Assets/CSS/portfolio.css
@@ -143,3 +143,55 @@ section{
    color: #757575;
 }
 /* ------Resume Styles------ */
+.resume-content{
+   display: flex;
+   gap: 24px;
+}
+.resume-items{
+   margin-top: 30px;
+   margin-bottom: 30px;
+}
+.resume .title{
+   font-weight: 700;
+   font-size: 25px;
+   color: #474747;
+   margin-bottom: 10px;
+}
+.resume .sub-title{
+   font-weight: 600;
+   font-size: 20px;
+   color: #757575;
+   margin-bottom: 20px;
+}
+.resume .description{
+   font-weight: 400;
+   font-size: 16px;
+   color: #757575;
+}
+.resume-button{
+   margin-top: 50px;
+   text-align: center;
+}
+/* <!-------- Contact Section Style ------> */
+.contact{
+   display: flex;
+   gap: 100px;
+   background-color: #FFF8F3;
+   padding: 130px 200px;
+}
+.contact .section-title{
+   text-align: left;
+}
+.contact input[type= "text"], input[type= "email"], textarea{
+   margin-bottom: 24px;
+   border: 0;
+   width: 100%;
+   padding: 18px 30px;
+}
+input{
+   height: 64px;
+}
+
+.contact a{
+   text-decoration: none;
+}
